jsonedit-model/src/main/java/com/boothen/jsonedit/antlr/JSONParser.java
// Generated from JSON.g4 by ANTLR 4.5.2
package com.boothen.jsonedit.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSONParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9,
        STRING=10, NUMBER=11, WS=12;
    public static final int
        RULE_json = 0, RULE_object = 1, RULE_pair = 2, RULE_array = 3, RULE_value = 4;
    public static final String[] ruleNames = {
        "json", "object", "pair", "array", "value"
    };

    private static final String[] _LITERAL_NAMES = {
        null, "'{'", "','", "'}'", "':'", "'['", "']'", "'true'", "'false'", "'null'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, null, null, null, null, null, null, null, null, null, "STRING",
        "NUMBER", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    private static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "JSON.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public JSONParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }
    public static class JsonContext extends ParserRuleContext {
        public ObjectContext object() {
            return getRuleContext(ObjectContext.class,0);
        }
        public ArrayContext array() {
            return getRuleContext(ArrayContext.class,0);
        }
        public JsonContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_json; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).enterJson(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).exitJson(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitJson(this);
            else return visitor.visitChildren(this);
        }
    }

    public final JsonContext json() throws RecognitionException {
        JsonContext _localctx = new JsonContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_json);
        try {
            setState(12);
            switch (_input.LA(1)) {
            case T__0:
                enterOuterAlt(_localctx, 1);
                {
                setState(10);
                object();
                }
                break;
            case T__4:
                enterOuterAlt(_localctx, 2);
                {
                setState(11);
                array();
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ObjectContext extends ParserRuleContext {
        public List<PairContext> pair() {
            return getRuleContexts(PairContext.class);
        }
        public PairContext pair(int i) {
            return getRuleContext(PairContext.class,i);
        }
        public ObjectContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_object; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).enterObject(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).exitObject(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitObject(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ObjectContext object() throws RecognitionException {
        ObjectContext _localctx = new ObjectContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_object);
        int _la;
        try {
            setState(27);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                setState(14);
                match(T__0);
                setState(15);
                pair();
                setState(20);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==T__1) {
                    {
                    {
                    setState(16);
                    match(T__1);
                    setState(17);
                    pair();
                    }
                    }
                    setState(22);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(23);
                match(T__2);
                }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
                {
                setState(25);
                match(T__0);
                setState(26);
                match(T__2);
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class PairContext extends ParserRuleContext {
        public TerminalNode STRING() { return getToken(JSONParser.STRING, 0); }
        public ValueContext value() {
            return getRuleContext(ValueContext.class,0);
        }
        public PairContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_pair; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).enterPair(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).exitPair(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitPair(this);
            else return visitor.visitChildren(this);
        }
    }

    public final PairContext pair() throws RecognitionException {
        PairContext _localctx = new PairContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_pair);
        try {
            enterOuterAlt(_localctx, 1);
            {
            setState(29);
            match(STRING);
            setState(30);
            match(T__3);
            setState(31);
            value();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ArrayContext extends ParserRuleContext {
        public List<ValueContext> value() {
            return getRuleContexts(ValueContext.class);
        }
        public ValueContext value(int i) {
            return getRuleContext(ValueContext.class,i);
        }
        public ArrayContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_array; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).enterArray(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).exitArray(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitArray(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ArrayContext array() throws RecognitionException {
        ArrayContext _localctx = new ArrayContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_array);
        int _la;
        try {
            setState(46);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
            case 1:
                enterOuterAlt(_localctx, 1);
                {
                setState(33);
                match(T__4);
                setState(34);
                value();
                setState(39);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==T__1) {
                    {
                    {
                    setState(35);
                    match(T__1);
                    setState(36);
                    value();
                    }
                    }
                    setState(41);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(42);
                match(T__5);
                }
                break;
            case 2:
                enterOuterAlt(_localctx, 2);
                {
                setState(44);
                match(T__4);
                setState(45);
                match(T__5);
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ValueContext extends ParserRuleContext {
        public TerminalNode STRING() { return getToken(JSONParser.STRING, 0); }
        public TerminalNode NUMBER() { return getToken(JSONParser.NUMBER, 0); }
        public ObjectContext object() {
            return getRuleContext(ObjectContext.class,0);
        }
        public ArrayContext array() {
            return getRuleContext(ArrayContext.class,0);
        }
        public ValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_value; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).enterValue(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof JSONListener ) ((JSONListener)listener).exitValue(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitValue(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ValueContext value() throws RecognitionException {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_value);
        try {
            setState(55);
            switch (_input.LA(1)) {
            case STRING:
                enterOuterAlt(_localctx, 1);
                {
                setState(48);
                match(STRING);
                }
                break;
            case NUMBER:
                enterOuterAlt(_localctx, 2);
                {
                setState(49);
                match(NUMBER);
                }
                break;
            case T__0:
                enterOuterAlt(_localctx, 3);
                {
                setState(50);
                object();
                }
                break;
            case T__4:
                enterOuterAlt(_localctx, 4);
                {
                setState(51);
                array();
                }
                break;
            case T__6:
                enterOuterAlt(_localctx, 5);
                {
                setState(52);
                match(T__6);
                }
                break;
            case T__7:
                enterOuterAlt(_localctx, 6);
                {
                setState(53);
                match(T__7);
                }
                break;
            case T__8:
                enterOuterAlt(_localctx, 7);
                {
                setState(54);
                match(T__8);
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static final ATN _ATN =
        new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }
}
